--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,7 +15,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4 
         with:
-          repo-token: ${{ secrets.AUTOMERGERUSER }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run merge task
         run: |
           git checkout -b dev
