--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -10,12 +10,12 @@ jobs:
   merge:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+ 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4 
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+           token: ${{ github.token }}
       - name: Run merge task
         run: |
           git checkout -b dev
