--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,7 +15,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4 
         with:
-           token: ${{ github.token }}
+           ref: main
+           token: ${{ secrets.USERPASS }}
       - name: Run merge task
         run: |
           git checkout -b dev
