--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Run merge task
         run: |
           git checkout -b dev || echo "Branch already exists, continuing..."
+          git config pull.rebase false
           git pull origin dev 
           git merge main
           git push origin dev
