--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -22,7 +22,8 @@ COPY standalone.conf /opt/eap8/bin
 #timezone setting
 RUN apk add --no-cache tzdata
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone
-
+RUN apk add mksh
+RUN ln -sf  /bin/mksh /bin/sh
 CMD ["tail","-f","/dev/null"]    
 
 
